--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Qore3 Innovations</title>
-  <meta content="Innocations in Agriculture" name="descriptison">
+  <meta content="Innovations in Agriculture" name="descriptison">
   <meta content="Qore3 Innovations, High Tech Poly House, High Tech Fish Farm, High Density Fish Farm, High Tech Mini Poly House, High Tech Goat Farm, Renovation of polyhouse, End to end service in polyhouse, end to end service in farm, end to end service in agriculture" name="keywords">
 
   <!-- Favicons -->
@@ -40,8 +40,8 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container">
-      <a href="index.html" class="hero-logo" data-aos="zoom-in"><img src="assets/img/hero-logo.png" alt=""></a>
-      <a href="index.html" class="hero-logo" data-aos="zoom-in"><img src="assets/img/startup.png" alt=""></a>
+      <a href="index.html" class="hero-logo" data-aos="zoom-in"><img src="assets/img/hero-logo.png" alt="Qore3 Innovations Logo"></a>
+      <a href="index.html" class="hero-logo" data-aos="zoom-in"><img src="assets/img/startup.png" alt="Startup India Logo" style="width:250px;height:70px;"></a>
       <a data-aos="fade-up" href="#about" class="btn-get-started scrollto">Get Started</a>
     </div>
   </section><!-- End Hero -->
@@ -81,7 +81,7 @@
           <li class="nav-logo"><a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a></li>
 
           <li><a href="#portfolio">Portfolio</a></li>
-<!--          <li><a href="#pricing">Pricing</a></li>-->
+          <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
 
         </ul>
@@ -607,33 +607,79 @@
 <!--      </div>-->
 <!--    </section>&lt;!&ndash; End Team Section &ndash;&gt;-->
 
-    <!-- ======= Pricing Section ======= -->
-<!--    <section id="pricing" class="pricing section-bg">-->
-<!--      <div class="container">-->
+<!--     ======= Pricing Section =======-->
+    <section id="projects" class="pricing section-bg">
+      <div class="container">
 
-<!--        <div class="section-title" data-aos="fade-up">-->
-<!--          <h2>Pricing</h2>-->
-<!--          <p>Magnam dolores commodi suscipit eius consequatur ex aliquid fuga eum quidem</p>-->
-<!--        </div>-->
+        <div class="section-title" data-aos="fade-up">
+          <h2>Projects</h2>
+          <p>For Sustainable Living</p>
+        </div>
 
-<!--        <div class="row">-->
+        <div class="row">
 
-<!--          <div class="col-lg-4 col-md-6">-->
-<!--            <div class="box" data-aos="zoom-in" data-aos-delay="100">-->
-<!--              <h3>Free</h3>-->
+          <div class="col-lg-4 col-md-6">
+            <div class="box" data-aos="zoom-in" data-aos-delay="100">
+              <h3>High Tech Goat Farm</h3>
 <!--              <h4><sup>$</sup>0<span> / month</span></h4>-->
-<!--              <ul>-->
-<!--                <li>Aida dere</li>-->
-<!--                <li>Nec feugiat nisl</li>-->
-<!--                <li>Nulla at volutpat dola</li>-->
+              <ul>
+                <li>High Tech Cage</li>
+                <li>Health Certified Original Malabari Goats</li>
+                <li>One Year Insurance for Goats</li>
+                <li>CO3 Stem for Cultivation</li>
+                <li>Training for Farmer</li>
+                <li>Value Assurance</li>
+                <li>Buyback of Goat Kids</li>
 <!--                <li class="na">Pharetra massa</li>-->
 <!--                <li class="na">Massa ultricies mi</li>-->
-<!--              </ul>-->
-<!--              <div class="btn-wrap">-->
+              </ul>
+              <div class="btn-wrap">
 <!--                <a href="#" class="btn-buy">Buy Now</a>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--          </div>-->
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6">
+            <div class="box" data-aos="zoom-in" data-aos-delay="100">
+              <h3>High Density Fish Farm</h3>
+<!--              <h4><sup>$</sup>0<span> / month</span></h4>-->
+              <ul>
+                <li>Portable Fish Tank</li>
+                <li>Chitralada Tilapia / GIFT / Karimeen / Shrimp</li>
+                <li>Aquaponics System</li>
+                <li>Recirculating Aquaculture System</li>
+                <li>Latest Filtration System</li>
+                <li>Risk Free Aeration System</li>
+                <li>Training for Farmer</li>
+<!--                <li class="na">Pharetra massa</li>-->
+<!--                <li class="na">Massa ultricies mi</li>-->
+              </ul>
+              <div class="btn-wrap">
+<!--                <a href="#" class="btn-buy">Buy Now</a>-->
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6">
+            <div class="box" data-aos="zoom-in" data-aos-delay="100">
+              <h3>High Tech Vegetable Farm</h3>
+<!--              <h4><sup>$</sup>0<span> / month</span></h4>-->
+              <ul>
+                <li>Polyhouse</li>
+                <li>High Quality Imported Seeds</li>
+                <li>Precision Farming</li>
+                <li>Integration of NFT</li>
+                <li>Automatic Feeding System</li>
+                <li>Soil based Bed Preparation</li>
+                <li>Training for Farmer</li>
+<!--                <li class="na">Pharetra massa</li>-->
+<!--                <li class="na">Massa ultricies mi</li>-->
+              </ul>
+              <div class="btn-wrap">
+<!--                <a href="#" class="btn-buy">Buy Now</a>-->
+              </div>
+            </div>
+          </div>
 
 <!--          <div class="col-lg-4 col-md-6 mt-4 mt-md-0">-->
 <!--            <div class="box recommended" data-aos="zoom-in">-->
@@ -670,10 +716,10 @@
 <!--            </div>-->
 <!--          </div>-->
 
-<!--        </div>-->
+        </div>
 
-<!--      </div>-->
-<!--    </section>&lt;!&ndash; End Pricing Section &ndash;&gt;-->
+      </div>
+    </section><!-- End Pricing Section -->
 
     <!-- ======= Frequently Asked Questions Section ======= -->
 <!--    <section id="faq" class="faq">-->
@@ -852,18 +898,18 @@
       </div>
     </div>
 
-    <div class="container footer-bottom clearfix">
-      <div class="copyright">
-        &copy; Copyright <strong><span>Knight</span></strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/knight-free-bootstrap-theme/ -->
-<!--        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>-->
-      </div>
-    </div>
+<!--    <div class="container footer-bottom clearfix">-->
+<!--      <div class="copyright">-->
+<!--        &copy; Copyright <strong><span></span></strong>. All Rights Reserved-->
+<!--      </div>-->
+<!--      <div class="credits">-->
+<!--        &lt;!&ndash; All the links in the footer should remain intact. &ndash;&gt;-->
+<!--        &lt;!&ndash; You can delete the links only if you purchased the pro version. &ndash;&gt;-->
+<!--        &lt;!&ndash; Licensing information: https://bootstrapmade.com/license/ &ndash;&gt;-->
+<!--        &lt;!&ndash; Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/knight-free-bootstrap-theme/ &ndash;&gt;-->
+<!--&lt;!&ndash;        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>&ndash;&gt;-->
+<!--      </div>-->
+<!--    </div>-->
   </footer><!-- End Footer -->
 
   <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
