--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <section id="hero">
     <div class="hero-container">
       <a href="index.html" class="hero-logo" data-aos="zoom-in"><img src="assets/img/hero-logo.png" alt="Qore3 Innovations Logo"></a>
-      <a href="index.html" class="hero-logo" data-aos="zoom-in"><img src="assets/img/startup.png" alt="Startup India Logo" style="width:250px;height:70px;"></a>
+      <a href="index.html" class="hero-logo" data-aos="zoom-in"><img src="assets/img/startup logo.png" alt="Startup India Logo" style="width:250px;height:70px;"></a>
       <a data-aos="fade-up" href="#about" class="btn-get-started scrollto">Get Started</a>
     </div>
   </section><!-- End Hero -->
