--- a/index.html
+++ b/index.html
@@ -817,7 +817,9 @@
 
               <div class="phone">
                 <i class="icofont-phone"></i>
-                <h4>Call:</h4>
+                <h4>Toll Free - India:</h4>
+                <p>+91 94005 85947</p>
+                <h4>Whatsapp:</h4>
                 <p>+91 94005 85947</p>
               </div>
 
