social media updation

--- a/index.html
+++ b/index.html
@@ -889,12 +889,12 @@
         </div>
 
         <div class="social-links">
-<!--          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>-->
+         <a href="https://twitter.com/qore3innovation" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="https://www.facebook.com/qore3innovations" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="https://instagram.com/qore3innovations" class="instagram"><i class="bx bxl-instagram"></i></a>
 <!--          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>-->
           <a href="https://www.youtube.com/channel/UC_CMU-WbZG6ZeIBhHEuiVAw" class="linkedin"><i class="bx bxl-youtube"></i></a>
-<!--          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>-->
+         <a href="https://www.linkedin.com/company/qore3innovations" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
 
       </div>
