--- a/index.html
+++ b/index.html
@@ -2,6 +2,23 @@
 <html lang="en">
 
 <head>
+  <script type="application/ld+json">
+    { "@context" : "http://qore3innovations.com/",
+      "@type" : "Agritech Startup",
+      "name" : "Qore3 Innovations Pvt Ltd",
+      "url" : "http://qore3innovations.com/",
+      "sameAs" : [ "https://www.facebook.com/qore3innovations",
+        "https://twitter.com/qore3innovation",
+        "https://www.youtube.com/channel/UC_CMU-WbZG6ZeIBhHEuiVAw",
+        "https://www.linkedin.com/company/qore3innovations",
+        "https://www.instagram.com/qore3innovations/",
+        "https://www.pinterest.com/qore3innovations/" ,
+        "https://plus.google.com/+Qore3Innovations",
+        "https://www.flickr.com/photos/qore3innovations/",
+        "https://www.github.com/qore3innovations"] 
+    }
+    </script>
+
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
