--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 
 <head>
   <script type="application/ld+json">
-    { "@context" : "http://qore3innovations.com/",
-      "@type" : "Agritech Startup",
+    { "@type" : "Agritech Startup",
       "name" : "Qore3 Innovations Pvt Ltd",
       "url" : "http://qore3innovations.com/",
       "sameAs" : [ "https://www.facebook.com/qore3innovations",
