--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <script type="application/ld+json">
-    { "@type" : "Agritech Startup",
+    { "@context": "http://schema.org",
+      @type" : "Agritech Startup",
       "name" : "Qore3 Innovations Pvt Ltd",
       "url" : "http://qore3innovations.com/",
       "sameAs" : ["https://www.facebook.com/qore3innovations",
