--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <script type="application/ld+json">
     { "@context": "http://schema.org",
-      @type" : "Agritech Startup",
+      "@type" : "Organization",
       "name" : "Qore3 Innovations Pvt Ltd",
       "url" : "http://qore3innovations.com/",
       "sameAs" : ["https://www.facebook.com/qore3innovations",
@@ -17,6 +17,7 @@
         "https://www.flickr.com/photos/qore3innovations/",
         "https://www.github.com/qore3innovations"] 
     }
+    <
     </script>
 
   <meta charset="utf-8">
