--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <
     </script>
   <meta name="description" content="Qore3 Innovations, incorporated in 2019, is an India based social enterprise. We aspire to become the nation's number one sustainability development & solutions provider. Most of our solutions are for improving agriculture productivity & ensuring security through technology based innovative nano-micro enterprise- livelihood models, conservation of water and for addressing the developmental challenges related to combating climate change. Our business is aligned to the ‘Sustainable Development Goals’ implemented by the United Nations.">
-  <meta property="og:title" content="Qore3 Innovations Pvt Ltd">
+  <meta property="og:title" content="Want to Become A Successful Farmer? Here are the Excellent Tips, Benefits of Rearing Goats or farming vegetables or fruits or livestocks or poultry & Making Maximum Profit with consultancy and minimum value assurance">
   <meta property="og:description" content="Qore3 Innovations, incorporated in 2019, is an India based social enterprise. We aspire to become the nation's number one sustainable development & solutions provider. Most of our solutions are for improving agriculture productivity & ensuring security through technology based innovative nano-micro enterprise- livelihood models, conservation of water and for addressing the developmental challenges related toICLEM addressing climate change. Our business is aligned to the ‘Sustainable Development Goals’ implemented by the United Nations.">
   <meta property="og:image" content="https://qore3innovations.com/images/q3-logo.png">
   <meta property="og:image:width" content="1200">
