--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     }
     <
     </script>
-  <meta name="description" content="Qore3 Innovations, incorporated in 2019, is an India based social enterprise. We aspire to become the nation's number one sustainability development & solutions provider. Most of our solutions are for improving agriculture productivity & ensuring security through technology based innovative nano-micro enterprise- livelihood models, conservation of water and for addressing the developmental challenges related to combating climate change. Our business is aligned to the ‘Sustainable Development Goals’ implemented by the United Nations.">
+  <meta name="description" content="Qore3 Innovations, incorporated in 2019, is an India based social enterprise. We aspire to become the nation's number one sustainability development & solutions provider. Most of our solutions are for improving agriculture productivity & ensuring security through technology based innovative nano-micro enterprise- livelihood models, conservation of water and for addressing the developmental challenges related to combating climate change. Our business is aligned to the ‘Sustainable Development Goals’ implemented by the United Nations. Agriculture Projects | Hi-Tech Agriculture | Hi-Tech Farming Techniques in Kerala | India agriculture News | Indiaagronet, Implementation of high-tech farming in other states has proven that the production of high-tech farming can increase production by 3 to 10 times. So many people are choosing high-tech farming now, with little investment in agriculture. Through the synthesis of micro-irrigation, soilless farming, fertilization, protected agriculture, (greenhouse/polytunnel / shady net) micro-breeding hybrid seed use and plastic sheeting.">
   <meta property="og:title" content="Want to Become A Successful Farmer? Here are the Excellent Tips, Benefits of Rearing Goats or farming vegetables or fruits or livestocks or poultry & Making Maximum Profit with consultancy and minimum value assurance">
-  <meta property="og:description" content="Qore3 Innovations, incorporated in 2019, is an India based social enterprise. We aspire to become the nation's number one sustainable development & solutions provider. Most of our solutions are for improving agriculture productivity & ensuring security through technology based innovative nano-micro enterprise- livelihood models, conservation of water and for addressing the developmental challenges related toICLEM addressing climate change. Our business is aligned to the ‘Sustainable Development Goals’ implemented by the United Nations.">
+  <meta property="og:description" content="Qore3 Innovations, incorporated in 2019, is an India based social enterprise. We aspire to become the nation's number one sustainable development & solutions provider. Most of our solutions are for improving agriculture productivity & ensuring security through technology based innovative nano-micro enterprise- livelihood models, conservation of water and for addressing the developmental challenges related toICLEM addressing climate change. Our business is aligned to the ‘Sustainable Development Goals’ implemented by the United Nations., Implementation of high-tech farming in other states has proven that the production of high-tech farming can increase production by 3 to 10 times. So many people are choosing high-tech farming now, with little investment in agriculture. Through the synthesis of micro-irrigation, soilless farming, fertilization, protected agriculture, (greenhouse/polytunnel / shady net) micro-breeding hybrid seed use and plastic sheeting.">
   <meta property="og:image" content="https://qore3innovations.com/images/q3-logo.png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="1200">
@@ -54,6 +54,24 @@
   <meta property="article:tag" content="agriculture projects">
   <meta property="article:tag" content="agri startup">
   <meta property="article:tag" content="agri startup kerala">
+  <meta property="article:tag" content="hi-tech farming">
+  <meta property="article:tag" content="polyhouses">
+  <meta property="article:tag" content="farmers">
+  <meta property="article:tag" content="Kerala">
+  <meta property="article:tag" content="rain shelters">
+  <meta property="article:tag" content="precision farming">
+  <meta property="article:tag" content="watermelon">
+  <meta property="article:tag" content="dragon fruit">
+  <meta property="article:tag" content="Ummer Kutty">
+  <meta property="article:tag" content="Saifulla P">
+  <meta property="article:tag" content="hydroponics DIY kit">
+  <meta property="article:tag" content="Santhosh Kumar">
+  <meta property="article:tag" content="mint">
+  <meta property="article:tag" content="PlantMe">
+  <meta property="article:tag" content="Abdul Hakkim VM">
+  <meta property="article:tag" content="salad cucumber">
+  <meta property="article:tag" content="Aneesh N Raj">
+  <meta property="article:tag" content="Shameer S">
 
   <meta property="og:image" content="http://qore3innovations.com/images/q3logo.png">
 
@@ -62,8 +80,8 @@
 
   <title>Qore3 Innovations</title>
   <meta content="Innovations in Agriculture" name="descriptison">
-  <meta content="Qore3 Innovations, , High Tech Fish Farm, High Density Fish Farm, High Tech Mini Poly House, High Tech Goat Farm, Renovation of polyhouse, End to end service in polyhouse, end to end service in farm, end to end service in agriculture" name="keywords">
-
+  <meta  name="keywords" content="hi-tech agriculture, agriculture technology updates, advances in Indian agriculture, advance technology in India, govt assistance for agriculture,hi-tech farming,polyhouses,farmers,Kerala,rain shelters,precision farming,watermelon,dragon fruit,Ummer Kutty,Saifulla P,hydroponics DIY kit,Santhosh Kumar,mint,PlantMe,Abdul Hakkim VM,salad cucumber,Aneesh N Raj,Shameer S,Qore3 Innovations, , High Tech Fish Farm, High Density Fish Farm, High Tech Mini Poly House, High Tech Goat Farm, Renovation of polyhouse, End to end service in polyhouse, end to end service in farm, end to end service in agriculture">
+  <meta name="news_keywords" content="hi-tech farming,polyhouses,farmers,Kerala,rain shelters,precision farming,watermelon,dragon fruit,Ummer Kutty,Saifulla P,hydroponics DIY kit,Santhosh Kumar,mint,PlantMe,Abdul Hakkim VM,salad cucumber,Aneesh N Raj,Shameer S">
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
