--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <meta property="article:tag" content="Aneesh N Raj">
   <meta property="article:tag" content="Shameer S">
 
-  <meta property="og:image" content="http://qore3innovations.com/images/q3logo.png">
+  <meta property="og:image" content="http://qore3innovations.com/assets/img/favicon.png">
 
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -84,7 +84,7 @@
   <meta name="news_keywords" content="hi-tech farming,polyhouses,farmers,Kerala,rain shelters,precision farming,watermelon,dragon fruit,Ummer Kutty,Saifulla P,hydroponics DIY kit,Santhosh Kumar,mint,PlantMe,Abdul Hakkim VM,salad cucumber,Aneesh N Raj,Shameer S">
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/logo.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Montserrat:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
