--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
           </div>
           <div class="col-lg-6" data-aos="fade-left">
             <div class="content pt-4 pt-lg-0 pl-0 pl-lg-3 ">
-              <h3>Innovation in Sustainabile Living</h3>
+              <h3>Innovation in Sustainable Living</h3>
               <p class="font-italic">
                 Qore3 Innovations is mandated to work exclusively on innovative projects in sustainability, agriculture and livelihood
                 with an approach to judiciously resect common people's voice in developmental planning
