--- a/index.html
+++ b/index.html
@@ -186,13 +186,13 @@
               <h3>Innovation in Sustainable Living</h3>
               <p class="font-italic">
                 Qore3 Innovations is mandated to work exclusively on innovative projects in sustainability, agriculture and livelihood
-                with an approach to judiciously resect common people's voice in developmental planning
+                with an approach to judiciously respect common people's voice in developmental planning
                 and implementation.
               </p>
               <ul>
                 <li><i class="bx bx-check-double"></i> We DREAM of an equitable world where the poor and marginalised can lead lives that are empowered and just.</li>
                 <li><i class="bx bx-check-double"></i> WE BELIEVE that this scale of change can be achieved through social enterprises, that is, businesses that place impact at the centre of their mission.</li>
-                <li><i class="bx bx-check-double"></i> WE INSPIRE, mentor, fund and support early stage, innovation‐based for‐profit enterprises that have an impact on the lives of the poor in India.</li>
+                <li><i class="bx bx-check-double"></i> WE INSPIRE, mentor, fund and support early stage innovation‐based for‐profit enterprises that have an impact on the lives of the poor in India.</li>
               </ul>
               <p>
 
