--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8014227499741517"
+     crossorigin="anonymous"></script>
   <script type="application/ld+json">
     { "@context": "http://schema.org",
       "@type" : "Organization",
