--- a/index.html
+++ b/index.html
@@ -889,16 +889,16 @@
               <div class="email">
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@qore3innovations.com</p>
+                <p>info@qore3innovation.com</p>
               </div>
 
-              <div class="phone">
+<!--               <div class="phone">
                 <i class="icofont-phone"></i>
                 <h4>Toll Free - India:</h4>
                 <p>1800 890 2391</p>
                 <h4>Whatsapp:</h4>
                 <p>+91 94005 85947</p>
-              </div>
+              </div> -->
 
             </div>
 
